tests/expectations/compiler/finalize/set_incorrect_num_operands.out
Error [EPAR0370021]: The type of `tokens` has no associated function `set` that takes 3 argument(s).
    --> compiler-test:17:9
     |
  17 |         tokens.set(addr, amount, 1u128);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370021]: The type of `amounts` has no associated function `set` that takes 1 argument(s).
    --> compiler-test:19:9
     |
  19 |         amounts.set(1u8);
     |         ^^^^^^^^^^^^^^^^
Error [EPAR0370021]: The type of `amounts` has no associated function `set` that takes 0 argument(s).
    --> compiler-test:21:9
     |
  21 |         amounts.set();
     |         ^^^^^^^^^^^^^
